--- a/app/src/main/res/layout/fragment_new_job_request.xml
+++ b/app/src/main/res/layout/fragment_new_job_request.xml
@@ -1,201 +1,96 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:clickable="true"
     tools:context=".Fragments.NewJobRequestFragment">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!-- Name input -->
-        <RelativeLayout
+        <!-- Image input -->
+        <ImageView
+            android:id="@+id/newJobImageView"
+            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            >
-
-            <TextView
-                android:id="@+id/textViewName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Name"
-                android:layout_marginLeft="60dp"
-                android:layout_marginRight="20dp"
-                android:textAlignment="viewStart"
-                android:textSize="24sp" />
-
-            <EditText
-                android:id="@+id/editTextName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_toRightOf="@id/textViewName"
-                android:inputType="textPersonName" />
-
-        </RelativeLayout>
-
-        <!-- Email input -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/textViewEmail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="60dp"
-                android:layout_marginRight="20dp"
-                android:text="Email"
-                android:textAlignment="viewStart"
-                android:textSize="24sp" />
-
-            <EditText
-                android:id="@+id/editTextEmail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_toRightOf="@id/textViewEmail"
-                android:inputType="textPersonName" />
-
-        </RelativeLayout>
-
-        <!-- Password input -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/textViewPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="20dp"
-                android:text="Password"
-                android:textAlignment="viewStart"
-                android:textSize="24sp" />
-
-            <EditText
-                android:id="@+id/editTextPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:layout_toRightOf="@id/textViewPassword"
-                android:inputType="textPersonName" />
-
-        </RelativeLayout>
+            android:src="@android:drawable/ic_menu_camera" />
 
         <!-- Address input -->
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2">
 
             <TextView
-                android:id="@+id/textViewAddress"
+                android:id="@+id/newJobTextViewAddress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Address"
-                android:textAlignment="viewStart"
-                android:layout_marginLeft="50dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
+                android:text="Address:"
+                android:textAlignment="viewStart"
                 android:textSize="24sp" />
 
             <EditText
-                android:id="@+id/editTextAddress"
+                android:id="@+id/newJobEditTextAddress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_toRightOf="@id/newFragmenttextViewAddress"
                 android:ems="10"
-                android:layout_toRightOf="@id/textViewAddress"
                 android:inputType="textPersonName" />
 
         </RelativeLayout>
 
-        <!-- Customer button -->
-        <RelativeLayout
+
+        <!-- Description input -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_weight="1">
 
-            <RadioButton
-                android:id="@+id/CustomerRadioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="100dp"
-                android:layout_marginRight="80dp"
-                android:text="" />
-
             <TextView
-                android:id="@+id/CustomerRadioBtnTextView"
+                android:id="@+id/textViewDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/CustomerRadioButton"
-                android:text="Customer"
-                android:textAlignment="textStart"
-                android:textSize="18sp" />
-        </RelativeLayout>
+                android:text="Description:"
+                android:textAlignment="viewStart"
+                android:textSize="24sp" />
 
-        <!-- Handy man button -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
+            <EditText
+                android:id="@+id/editTextDescription"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toRightOf="@id/textViewDescription"
+                android:ems="10"
+                android:gravity="top|left"
+                android:hint="Put job request description here...."
+                android:inputType="textMultiLine"
+                android:lines="8"
+                android:maxLines="20"
+                android:scrollbars="vertical" />
 
-            <RadioButton
-                android:id="@+id/HandyManRadioButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="100dp"
-                android:layout_marginRight="80dp"
-                android:text="" />
-
-            <TextView
-                android:id="@+id/HandyManRadioBtnTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/HandyManRadioButton"
-                android:text="Handy-man"
-                android:textAlignment="textStart"
-                android:textSize="18sp" />
-        </RelativeLayout>
-
-        <!-- Categories drop down menu -->
-        <Spinner
-            android:id="@+id/DropDownCategories"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="15dp"
-            android:background="?attr/colorButtonNormal"
-            android:spinnerMode="dropdown" />
-
-        <!-- Areas drop down menu -->
-        <Spinner
-            android:id="@+id/DropDownAreas"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="15dp"
-            android:background="?attr/colorButtonNormal"
-            android:spinnerMode="dropdown" />
+        </LinearLayout>
 
         <!-- Save button -->
         <Button
-            android:id="@+id/saveBtn"
+            android:id="@+id/newJobSaveBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:layout_weight="0.2"
+            android:background="@color/colorPrimary"
             android:text="Save" />
 
         <!-- Progress bar will be shown only after saved pressed -->
         <ProgressBar
-            android:id="@+id/progressBar"
+            android:id="@+id/newJobProgressBar"
             style="?android:attr/progressBarStyle"
             android:layout_width="30dp"
             android:layout_gravity="center|bottom"
