--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -98,7 +98,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/textViewAddress"
+                android:id="@+id/newFragmenttextViewAddress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Address"
@@ -112,7 +112,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:layout_toRightOf="@id/textViewAddress"
+                android:layout_toRightOf="@id/newFragmenttextViewAddress"
                 android:inputType="textPersonName" />
 
         </RelativeLayout>
