--- a/app/src/main/res/layout/fragment_new_job_request.xml
+++ b/app/src/main/res/layout/fragment_new_job_request.xml
@@ -14,14 +14,15 @@
         android:orientation="vertical">
 
         <!-- Image input -->
-        <ImageButton
-            android:id="@+id/newJobImageButton"
+        <ImageView
+            android:id="@+id/newJobImageView"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@android:drawable/ic_menu_camera" />
 
         <!-- Address input -->
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -98,4 +99,11 @@
             android:visibility="gone"
             android:layout_height="30dp" />
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/new_job_pb"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
 </FrameLayout>
