--- a/app/src/main/res/layout/fragment_job_request_view.xml
+++ b/app/src/main/res/layout/fragment_job_request_view.xml
@@ -92,10 +92,24 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/job_request_view_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="0.75"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="397dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.75"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/add_comment_button"
+                android:layout_width="161dp"
+                android:layout_height="wrap_content"
+                android:text="Add Comment" />
+        </LinearLayout>
     </LinearLayout>
 </FrameLayout>
