--- a/app/src/main/res/layout/fragment_job_request_view.xml
+++ b/app/src/main/res/layout/fragment_job_request_view.xml
@@ -103,13 +103,25 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1.75"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/add_comment_button"
                 android:layout_width="161dp"
                 android:layout_height="wrap_content"
                 android:text="Add Comment" />
+
+            <ImageButton
+                android:id="@+id/delete_job_request"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_menu_delete" />
+
+            <ProgressBar
+                android:id="@+id/job_request_view_pb"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
