--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:orientation="horizontal"
     tools:context=".Activitys.MainActivity">
 
+
     <LinearLayout
         android:id="@+id/main_linearlayout"
         android:layout_width="50dp"
@@ -66,13 +67,21 @@
         android:layout_width="3dp"
         android:layout_height="match_parent"
         android:layout_toEndOf="@id/main_linearlayout"
-        android:background="@android:color/background_dark"></ImageView>
+        android:background="@android:color/background_dark"/>
 
-    <FrameLayout
-        android:id="@+id/main_fragment_container"
+    <fragment
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/nav_host_fragment"
         android:layout_toEndOf="@id/main_divder"
-        android:layout_height="match_parent" >
-    </FrameLayout>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_graph"/>
+
 
 </RelativeLayout>
+
