--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -1,112 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<fragment
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main_frame_layout"
-    >
-    <LinearLayout
-        android:id="@+id/sign_main_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="3"
-        tools:context=".Activitys.SignInActivity">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_weight="1.5"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/TextViewEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="Email"
-                android:textSize="30sp" />
-
-            <EditText
-                android:id="@+id/editTextEmail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:hint="Put your Email address"
-                android:inputType="textEmailAddress"
-                android:textAlignment="center" />
-
-            <TextView
-                android:id="@+id/TextViewPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="Password"
-                android:textSize="30sp" />
-
-            <EditText
-                android:id="@+id/editTextPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:hint="Put your Password"
-                android:inputType="textPassword" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/signin_login_btn"
-                android:layout_width="1dp"
-                android:layout_height="wrap_content"
-                android:text="LOG IN"
-                android:gravity="center"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:onClick="userPressed"
-                />
-            <Button
-                android:id="@+id/signin_register_btn"
-                android:layout_width="1dp"
-                android:layout_height="wrap_content"
-                android:text="REGISTER"
-                android:gravity="center"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:onClick="userPressed"
-                />
-        </LinearLayout>
-
-        <ProgressBar
-            android:id="@+id/signin_progressbar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="30dp"
-            android:layout_gravity="center|bottom"
-            android:layout_marginBottom="20dp"
-            android:visibility="gone"
-            android:layout_height="30dp" />
-
-        <TextView
-            android:id="@+id/forget_password_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:gravity="center"
-            android:text="Forgot password?"
-            android:layout_margin="10dp"
-            android:onClick="userPressed"
-            />
-    </LinearLayout>
-</FrameLayout>
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/signin_nav_host_fragment"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:name="androidx.navigation.fragment.NavHostFragment"
+    app:defaultNavHost="true"
+    app:navGraph="@navigation/login_nav_graph"/>
