Added the edit option.

--- a/app/src/main/res/layout/fragment_job_request_view.xml
+++ b/app/src/main/res/layout/fragment_job_request_view.xml
@@ -118,6 +118,12 @@
                 android:layout_height="wrap_content"
                 android:src="@android:drawable/ic_menu_delete" />
 
+            <ImageButton
+                android:id="@+id/edit_job_request"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_menu_edit" />
+
             <ProgressBar
                 android:id="@+id/job_request_view_pb"
                 style="?android:attr/progressBarStyle"
