--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryBlack">#000000</color>
     <color name="colorPrimaryWhite">#FFFFFF</color>
     <color name="colorAccent">#111011</color>
 </resources>
